Implement user authentication and JWT handling
- Added JWT authentication service and middleware for secure user access.
- Enhanced user registration to support both new user creation and existing user login with JWT token generation.
- Updated API routes to include authentication checks and user context management.
- Refactored user-related database queries and use cases to support new authentication flow.
- Improved OpenAPI documentation to reflect changes in user registration and authentication responses.

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       NS_MARIADB_USER: user
       NS_MARIADB_PASSWORD: password
       NS_MARIADB_DATABASE: template_db
+      JWT_SECRET: b6b6424fbcf066b80d45b454e677f730097279e6d2bd5ab6
     volumes:
       - .:/app
     depends_on:
