--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@iconify/vue": "^5.0.0",
+    "axios": "1.10.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
